--- a/pages/promociones-bancarias.html
+++ b/pages/promociones-bancarias.html
@@ -3,6 +3,9 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="description" content="Descubre ofertas exclusivas con tarjetas y bancos. ¡Ahorra en cada compra y disfruta de beneficios únicos en nuestra web!">
+        <meta name="keywords" content="viajes, destinos, turismo, aventura, vacaciones, ofertas de viajes, experiencias de viaje, itinerarios, escapadas, paquetes turísticos, hoteles, vuelos, viajes internacionales, viajes nacionales, descuentos de viaje, agencia de viajes">
+
         <title>Mystery Travel - Cruceros</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="../img/favicon.png">
@@ -24,11 +27,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       <a class="nav-link" href="../pages/destinos.html">Destinos</a>
                       <a class="nav-link" href="../pages/cruceros.html">Cruceros</a>
                       <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                      <a class="nav-link" href="../pages/arma-tu-viaje.html">Promociones Bancarias</a>
+                      <a class="nav-link active" href="../pages/promociones-bancarias.html">Promociones Bancarias</a>
                     </div>
                 </div>
             
@@ -42,16 +45,16 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../img/promo-galicia.webp"  class="d-block w-100" alt="...">
+                <img src="../img/promo-galicia.webp"  class="d-block w-100" alt="Promociones Banco Galicia">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/promo-naranja.png" class="d-block w-100" alt="...">
+                <img src="../img/promo-naranja.png" class="d-block w-100" alt="Promociones Naranja X">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/promo-santander.jpg" class="d-block w-100" alt="...">
+                <img src="../img/promo-santander.jpg" class="d-block w-100" alt="Promociones Banco Santander">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/promo-modo.jpeg" class="d-block w-100" alt="...">
+                <img src="../img/promo-modo.jpeg" class="d-block w-100" alt="Promociones Modo">
             </div>
         </div>
     </div>
@@ -73,7 +76,7 @@
                 <img src="../img/modo.jpeg" class="card-promociones" alt="Modo">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">Modo</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Descubre un mundo de beneficios con MODO. Compras inteligentes con descuentos exclusivos, cuotas sin interés y promociones imperdibles. Disfruta cada compra con las ventajas de MODO.<br> 🛍️💳 #EscaneaConMODO</p>
                 </div>
             </div>
         </li>
@@ -82,7 +85,7 @@
                 <img src="../img/mastercard.jpeg" class="card-promociones" alt="MasterCard">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">MasterCard</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Descubre un mundo de ventajas con MasterCard. Compras con descuentos exclusivos, cuotas sin interés y promociones irresistibles. Vive la experiencia única de MasterCard en cada transacción. 🛍️💳 #MasterCardBeneficios</p>
                 </div>
             </div>
         </li>
@@ -91,7 +94,7 @@
                 <img src="../img/visa.png" class="card-promociones" alt="Visa">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">Visa</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Explora un universo de ventajas con Visa. Compras con descuentos exclusivos, cuotas sin interés y promociones que hacen cada transacción única. Vive la experiencia Visa en cada compra. <br><br>🛍️💳 #VisaBeneficios</p>
                 </div>
             </div>
         </li>
@@ -100,7 +103,7 @@
                 <img src="../img/naranjax.png" class="card-promociones" alt="NaranjaX">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">Naranja X</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">¡Disfruta de tus compras con Tarjeta Naranja X! Descuentos exclusivos, cuotas sin interés y promociones increíbles. Haz que cada compra sea una experiencia única con beneficios especiales. <br><br>🛍️💳 #TarjetaNaranjaX</p>
                 </div>
             </div>
         </li>
@@ -109,7 +112,7 @@
                 <img src="../img/bbva.png" class="card-promociones" alt="BBVA">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">BBVA</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Disfruta de beneficios exclusivos con BBVA Francés. Compras con descuentos, cuotas sin interés y promociones especiales que hacen cada transacción más conveniente. Vive la experiencia única de BBVA Francés. 🛍️💳 #BBVAFrancésBeneficios</p>
                 </div>
             </div>
         </li>
