--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Mystery Travel - Contacto</title>
+    <meta name="description" content="Descubre destinos inolvidables y planifica tu próxima aventura con nuestra web de viajes. Encuentra ofertas exclusivas y vive experiencias únicas.">
+    <meta name="keywords" content="viajes, destinos, turismo, aventura, vacaciones, ofertas de viajes, experiencias de viaje, itinerarios, escapadas, paquetes turísticos, hoteles, vuelos, viajes internacionales, viajes nacionales, descuentos de viaje, agencia de viajes">
+
+    <title>Mystery Travel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" href="./img/favicon.png" alt="Mystery Travel">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body class="bs-success bs-success-rgb">
@@ -35,7 +38,7 @@
   </nav>
 </header>
 
-
+<main>
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
@@ -53,49 +56,49 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./img/banner-yellow.jpg" class="d-block w-100" alt="...">
+      <img src="./img/banner-yellow.jpg" class="d-block w-100" alt="Mystery Travel">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/bariloche.jpeg" class="d-block w-100" alt="...">
+      <img src="./img/bariloche.jpeg" class="d-block w-100" alt="Bariloche">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/cataratas33.jpg" class="d-block w-100" alt="...">
+      <img src="./img/cataratas33.jpg" class="d-block w-100" alt="Cataratas del Iguazú">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/mendoza4.jpg" class="d-block w-100" alt="...">
+      <img src="./img/mendoza4.jpg" class="d-block w-100" alt="Mendoza">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/cordoba2.jpeg" class="d-block w-100" alt="...">
+      <img src="./img/cordoba2.jpeg" class="d-block w-100" alt="Córdoba">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/buenos-aires.jpeg" class="d-block w-100" alt="...">
+      <img src="./img/buenos-aires.jpeg" class="d-block w-100" alt="Buenos Aires">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/las-lenas.webp" class="d-block w-100" alt="...">
+      <img src="./img/las-lenas.webp" class="d-block w-100" alt="Las Leñas">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -109,7 +112,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/ushuaia.jpeg" class="d-block w-100" alt="...">
+      <img src="./img/ushuaia.jpeg" class="d-block w-100" alt="Ushuaia">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -126,25 +129,24 @@
   </button>
 </div>
 
-
-<h1 class="name-top">Mystery Travel</h1>
+<div class="name-top">
+<h1>Mystery Travel</h1>
 
 <h2> Te contamos sobre nosotros</h2>
-<p class="introduccion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequuntur quaerat nemo, vero repudiandae, placeat est nisi aut doloribus soluta eveniet, minima quam vitae rerum molestiae assumenda sapiente debitis distinctio inventore iste fugiat ex. Qui aliquam quas nisi assumenda earum! Nesciunt unde eligendi eius aliquid itaque molestias tempore iste numquam dolor explicabo vero, sed fugit quod assumenda corrupti aspernatur, asperiores architecto cumque accusantium exercitationem. Quisquam at quas quibusdam! Tenetur, animi ex. Porro accusantium aperiam officia laborum accusamus dolore eum optio harum dicta facilis at, tenetur error vero officiis qui autem quod libero eveniet ut nemo deserunt. Explicabo aliquid nihil iste quaerat enim dolorum totam consequuntur reprehenderit architecto. Libero, quae dolore ducimus, rerum ipsam nulla nisi quasi quam, id repellendus quo voluptatibus culpa dignissimos dolorum ratione dolores? Porro esse repellendus laudantium, recusandae nisi vitae voluptas tempora in culpa architecto temporibus molestias voluptatem, tempore autem numquam incidunt magnam adipisci quae, blanditiis repudiandae.</P>
+<p>¡Bienvenido a Mystery Travel! Somos tu puerta de entrada a experiencias de viaje extraordinarias. ¿Quiénes somos?
+  Desde 2013, estamos redefiniendo la forma en que exploramos el mundo. Nuestra misión es simple: hacer que cada viaje sea inolvidable. Unite a nosotros en esta travesía de descubrimientos. ¡Viajemos juntos hacia nuevas experiencias! 🌍✈️
 
 <h2> Conocé nuestras alternativas</h2>
-<p class="introduccion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, reiciendis doloremque consequuntur possimus temporibus accusamus at sequi numquam veniam corporis adipisci labore. Explicabo animi blanditiis nihil qui laboriosam aut rem, sint enim et. Quaerat, rem dolore eius ipsa porro, totam at placeat molestias autem vitae eligendi quibusdam cumque animi excepturi!</p>
-
-
-<br>
-<hr>
-<div>
-  <footer>
-    <hr>
-    <p class="footer">Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
-  </footer>
+<p>Descubre las múltiples opciones que tenemos para vos en Mystery Travel! Sumergite en nuestro mundo de alternativas de viaje.Desde las majestuosas montañas de la Patagonia hasta las playas de aguas turquesas en el Caribe, ofrecemos destinos que se adaptan a todos los gustos. ¿Preferis unas vacaciones de una gran ciudad cosmopolita o la tranquilidad de un retiro en la naturaleza? Sea cual sea tu preferencia, tenemos opciones para cada tipo de viajero. Descubre nuestras propuestas y encuentra el destino perfecto para tu próxima aventura. 🌎✨</p>
 </div>
 
+</main>
+
+<hr>
+<footer>
+  <hr>
+  <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
