--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,9 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="description" content="Conéctate con nosotros fácilmente. Estamos aquí para ayudarte. Completa el formulario de contacto y nos pondremos en contacto contigo rápidamente.">
+        <meta name="keywords" content="viajes, destinos, turismo, aventura, vacaciones, ofertas de viajes, experiencias de viaje, itinerarios, escapadas, paquetes turísticos, hoteles, vuelos, viajes internacionales, viajes nacionales, descuentos de viaje, agencia de viajes">
+
         <title>Mystery Travel - Contacto</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="../img/favicon.png">
@@ -23,10 +26,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       <a class="nav-link" href="../pages/destinos.html">Destinos</a>
                       <a class="nav-link" href="../pages/cruceros.html">Cruceros</a>
-                      <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                       <a class="nav-link" href="../pages/promociones-bancarias.html">Promociones Bancarias</a>
                     </div>
                 </div>
