--- a/pages/cruceros.html
+++ b/pages/cruceros.html
@@ -3,10 +3,12 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="description" content="Embárcate en una experiencia única en alta mar con nuestros emocionantes cruceros. Descubre destinos fascinantes y disfruta de lujo en cada travesía.">
+        <meta name="keywords" content="viajes, destinos, turismo, aventura, vacaciones, ofertas de viajes, experiencias de viaje, itinerarios, escapadas, paquetes turísticos, hoteles, vuelos, viajes internacionales, viajes nacionales, descuentos de viaje, agencia de viajes">
         <title>Mystery Travel - Cruceros</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="icon" type="image/png" href="../img/favicon.png">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="icon" type="image/png" href="../img/favicon.png" alt="Mystery Travel">
+        <link rel="stylesheet" href="../css/main.css">
 
 </head>
 
@@ -24,9 +26,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       <a class="nav-link" href="../pages/destinos.html">Destinos</a>
-                      <a class="nav-link" href="../pages/cruceros.html">Cruceros</a>
+                      <a class="nav-link active" href="../pages/cruceros.html">Cruceros</a>
                       <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                       <a class="nav-link" href="../pages/promociones-bancarias.html">Promociones Bancarias</a>
                     </div>
@@ -34,23 +36,13 @@
             
             </div>
     </nav>
-
-
-
-    <!-- <nav>   
-                <a href="../index.html"><img class="nav-logo" src="../IMG/favicon.png" alt=""></a>
-            <ul class="navbar-list">
-                <li> <a class="items-superior" target="_self" href="../index.html"> Inicio</a></li>
-                <li> <a class="items-superior" target="_self" href="../pages/destinos.html"> Destinos</a> </li>
-                <li> <a class="items-superior" target="_self" href="../pages/arma-tu-viaje.html"> Arma tu viaje </a> </li>
-                <li> <a class="items-superior" target="_self" href="../pages/cruceros.html"> Cruceros</a> </li>
-                <li> <a class="items-superior" target="_self" href="../pages/contacto.html"> Contacto</a> </li>
-            </ul>
-        </nav> -->
    </header>
 
-     <h1 class="name-top">Mystery Travel</h1>
-    
+<main>
+<div class="name-top">
+    <h1>Mystery Travel</h1>
+</div>
+
 <img class="banner" src="../img/banner-yellow.jpg">
 
 
@@ -144,54 +136,15 @@
 </li>
 </ul>
 
+</main>
 
 
-<!-- <ul class="cruises-list">
-    <div class="cruises-list-tarjeta">
-        <a href="https://www.royalcaribbean.com/lac/es" title="Royal Caribbean Website" target="_blank">
-            <img class="logos-cruises" alt="Royal Caribbean Logo" title="Royal Caribbean" src="../img/royal-logo.jpeg" height="50"></a>
-            <li class="cruises-list-item">
-                <h2 class="txt-cruises">Royal Caribbean</h2>
-                <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deleniti, aliquid enim ipsam iure ducimus commodi consequuntur veniam doloremque, omnis voluptatibus quaerat tempore, atque accusamus soluta. Reprehenderit explicabo ducimus dolorem quia itaque, expedita dignissimos, libero natus minus totam praesentium a beatae quis fugiat non ex?</p>
-                <img class="imagen-cruises" src="../img/royal.webp" alt="Icon of the Seas">
-            </li>
-    </div>
-    <div class="cruises-list-tarjeta">
-        <a href="https://www.virginvoyages.com/" title="Virgin Website" target="_blank">
-            <img class="logos-cruises" alt="Virgin Logo" title="Virgin" src="../img/virgin-logo.webp" height="50"></a>
-            <li class="cruises-list-item">
-                <h2 class="txt-cruises">Virgin</h2>
-                <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deleniti, aliquid enim ipsam iure ducimus commodi consequuntur veniam doloremque, omnis voluptatibus quaerat tempore, atque accusamus soluta. Reprehenderit explicabo ducimus dolorem quia itaque, expedita dignissimos, libero natus minus totam praesentium a beatae quis fugiat non ex?</p>
-                <img class="imagen-cruises" src="../img/virgin.webp" alt="">
-            </li>
-    </div>
-    <div class="cruises-list-tarjeta">
-        <a href="https://disneycruise.disney.go.com/es-419/cruceros-con-disney/" title="Disney Cruises Website" target="_blank">
-            <img class="logos-cruises" alt="Disney Logo" title="Disney Cruise Line" src="../img/disney-logo.jpeg" height="50"></a>
-            <li class="cruises-list-item"><h2 class="txt-cruises">Disney</h2>
-                <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deleniti, aliquid enim ipsam iure ducimus commodi consequuntur veniam doloremque, omnis voluptatibus quaerat tempore, atque accusamus soluta. Reprehenderit explicabo ducimus dolorem quia itaque, expedita dignissimos, libero natus minus totam praesentium a beatae quis fugiat non ex?</p>
-                <img class="imagen-cruises" src="../img/disney.webp" alt="">
-            </li>
-    </div>
-    <div class="cruises-list-tarjeta">
-        <a href="https://www.princess.com/en-int" title="Princess Website" target="_blank">
-            <img class="logos-cruises" alt="Virgin Logo" title="Princess Cruise Line" src="../img/princess-logo.webp" height="50"></a>
-            <li class="cruises-list-item"><h2 class="txt-cruises">Princess </h2>
-                <p>Ahora bañado en colores otoñales, el spot clásico de la Patagonia es perfecto para un viaje en cualquier momento del año. En verano, el clima permite hacer actividades acuáticas y relajarse a las orillas del Nahuel Huapi; en invierno es el turno de la nieve, de los deportes de montaña y de la cocina caliente. En el medio, lo de siempre: trekking, cerveza artesanal y la belleza natural de los alrededores.</p>
-                <img class="imagen-cruises" src="../img/princess.jpeg" alt="">
-            </li>
-    </div>
-</ul> -->
-
-
-
-
-<div>
+<hr>
 <footer>
     <hr>
-    <p class="footer">Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
-  </footer>
-</div>
+    <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+</footer>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
