--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
+        <meta name="description" content="Explora la belleza de Argentina con nuestra guía de destinos nacionales. Descubre paisajes sorprendentes y vive la magia de nuestro país.">
+        <meta name="keywords" content="viajes, destinos, turismo, aventura, vacaciones, ofertas de viajes, experiencias de viaje, itinerarios, escapadas, paquetes turísticos, hoteles, vuelos, viajes internacionales, viajes nacionales, descuentos de viaje, agencia de viajes">
+
         <title>Mystery Travel - Cruceros</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="icon" type="image/png" href="../IMG/favicon.png">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="icon" type="image/png" href="../IMG/favicon.png" alt="Mystery Travel">
+        <link rel="stylesheet" href="../css/main.css">
 </head>
 
 
@@ -24,8 +27,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                      <a class="nav-link" href="../pages/destinos.html">Destinos</a>
+                      <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                      <a class="nav-link active" href="../pages/destinos.html">Destinos</a>
                       <a class="nav-link" href="../pages/cruceros.html">Cruceros</a>
                       <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                       <a class="nav-link" href="../pages/promociones-bancarias.html">Promociones Bancarias</a>
@@ -36,8 +39,9 @@
     </nav>
    </header>
 
-   <h1 class="name-top">Destinos Nacionales</h2>
-    
+   <div class="name-top">
+   <h1>Destinos Nacionales</h1>
+   </div>
 
 <div class="banner2"><img class="banner" src="../img/banner-yellow.jpg"></div>
 
@@ -50,7 +54,8 @@
             <img src="../img/cordoba.jpeg" class="card-img-top" alt="Cordoba">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Cordoba</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Descubre la magia de Cordoba. Turismo que fusiona historia, naturaleza y cultura. 
+                  Un viaje entre sierras, tradición y arte. Descubre la esencia única de esta provincia y explora cada rincón. Sumérgete en una experiencia única. 🏞️🎨"🌄🌿</p>
             </div>
         </div>
     </li>
@@ -59,7 +64,7 @@
             <img src="../img/mendoza4.jpg" class="card-img-top" alt="Mendoza">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Mendoza</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Viñedos interminables, majestuosa cordillera. Sabores de vino, aventuras sin fin. Embárcate en la experiencia única de Mendoza, Argentina. Turismo que mezcla la pasión vinícola, paisajes montañosos y actividades emocionantes.🍇🏔️.</p>
             </div>
         </div>
     </li>
@@ -68,7 +73,7 @@
             <img src="../img/ushuaia.jpeg" class="card-img-top" alt="Ushuaia">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Ushuaia</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Explora Ushuaia, Argentina: Un abrazo entre montañas imponentes y el océano infinito. Aventuras únicas te esperan en el fin del mundo. ¡Descubre la magia de Ushuaia, donde cada rincón cuenta una historia emocionante! ❄️🗻</p>
             </div>
         </div>
     </li>
@@ -77,7 +82,7 @@
             <img src="../img/cataratas33.jpg" class="card-img-top" alt="Cataratas">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Cataratas</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Explora las Cataratas del Iguazú: Donde las aguas danzan en un espectáculo majestuoso. Sumérgete en la maravilla natural y deja que la magia fluya en cada rincón. ¡Bienvenido a una de las 7 maravillas del mundo! <br>🌊🏞️"</p>
             </div>
         </div>
     </li>
@@ -86,7 +91,7 @@
             <img src="../img/salta.jpeg" class="card-img-top" alt="Salta">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Salta</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Salta, la linda. Donde la cultura y la naturaleza bailan en armonía. Descubre paisajes cautivadores, vive experiencias auténticas y siente la magia en cada rincón. Veni en Salta, donde cada momento es una nueva aventura. 🌵🏞️"</p>
             </div>
         </div>
     </li>
@@ -95,7 +100,7 @@
             <img src="../img/buenos-aires.jpeg" class="card-img-top" alt="Buenos Aires">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Buenos Aires</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Buenos Aires: donde la elegancia y pasión se entrelazan. Explora arquitectura icónica, sumérgete en rica cultura y siente la energía única. Adéntrate en Buenos Aires, donde cada calle es una historia por contar, y cada esquina esconde un secreto fascinante. </p>
             </div>
         </div>
     </li>
@@ -104,16 +109,16 @@
             <img src="../img/las-lenas.webp" class="card-img-top" alt="Las Leñas">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Las Leñas</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Las Leñas: entre picos imponentes y nieves eternas. Explora pistas desafiantes, vive la emoción del esquí, y siente la energía única de este paraíso invernal. Sumérgete en Las Leñas, donde cada montaña cuenta su propia historia de aventura. ⛷️❄️</p>
             </div>
         </div>
     </li>
     <li>
         <div class="card" style="width: 18rem;">
-            <img src="../img/buenos-aires.jpeg" class="card-img-top" alt="Buenos Aires">
+            <img src="../img/chalten.webp" class="card-img-top" alt="El Chalten">
             <div class="card-body">
-                <p class="titulo-carta-cruceros">Buenos Aires</p>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="titulo-carta-cruceros">El Chalten</p>
+                <p class="card-text">El Chaltén: Patagonia en su esplendor. Descubre senderos mágicos, maravíllate con picos imponentes y siente la esencia única de este paraíso natural. Bienvenido a El Chaltén, donde cada montaña cuenta una historia de aventura. 🏞️🏔️</p>
             </div>
         </div>
     </li>
@@ -122,83 +127,11 @@
 
 
 
-    <!-- <div id="carouselExampleCaptions" class="carousel slide col-md-8 offset-md-2">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../img/bariloche.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/cataratas33.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/cordoba.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/ushuaia.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/mendoza4.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/buenos-aires.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../img/salta.jpeg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div> -->
-
-<footer>
+<hr>
+<div>
+  <footer>
     <hr>
-    <p class="footer">Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+    <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
   </footer>
 </div>
 
