--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,6 +38,7 @@
     </nav>
    </header>
 
+<main>
 <h1 class="name-top">Mystery Travel</h1>
     
 <img class="banner" src="../img/banner-yellow.jpg">
@@ -82,41 +83,12 @@
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
-
-<!-- 
-<form>
-    <div>
-        <label for="nombre">Nombre y Apellido:</label>
-    </div>
-    <div>
-        <input type="text" placeholder="Ingrese su nombre completo" id="nombre" required/>
-    </div>
-    <div>
-        <label for="email">Email:</label>
-    </div>
-    <div>
-        <input type="email" placeholder="Ingrese su email" id="mail" name="user_mail" required/>
-    </div>
-    <div>
-        <label for="msg">Mensaje:</label>
-    </div>
-    <div>
-        <textarea placeholder="Ingrese su consulta..." name="user_message" required cols="16" rows="5"></textarea>
-    </div>
-
-    <input type="submit">
-    <input type="reset">
-
-  </form>
-  -->
-  
-  <div>
-  <footer>
-      <p>Derechos de autor © 2023. Mi sitio web.</p>
-      <p>Contáctanos en mysterytravel@viajes.com</p>
-    </footer>
-  </div>
-  
+    </main>
+      
+      <hr>
+      <footer>
+        <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+      </footer>  
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
