--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
         <title>Mystery Travel - Contacto</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="../img/favicon.png">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body class="bs-success bs-success-rgb">
