--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,13 +38,14 @@
    </header>
 
 <main>
-<h1 class="name-top">Mystery Travel</h1>
+  <div class="name-top">
+    <h1>Contacto</h1>
+    </div>
     
-<img class="banner" src="../img/banner-yellow.jpg">
+<div class="banner2"><img class="banner" src="../img/banner-yellow.jpg"></div>
 
 
 
-<h1>Contacto</h1>
 <hr>
     <div class="comentario-contacto">
     <h2>Estimado Cliente:</h2>
