--- a/pages/cruceros.html
+++ b/pages/cruceros.html
@@ -39,7 +39,7 @@
 
 <main>
 <div class="name-top">
-    <h1>Mystery Travel</h1>
+    <h1>Cruceros</h1>
 </div>
 
 <img class="banner" src="../img/banner-yellow.jpg">
