--- a/index.html
+++ b/index.html
@@ -65,57 +65,57 @@
     <div class="carousel-item">
       <img src="./img/bariloche.jpeg" class="d-block w-100" alt="Bariloche">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>Bariloche</h5>
+        <p>Destino alpino con lagos, bosques y delicias chocolateras</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/cataratas33.jpg" class="d-block w-100" alt="Cataratas del Iguazú">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Cataratas del Iguazú</h5>
+        <p>Maravilla natural con cascadas majestuosas y exuberante vegetación</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/mendoza4.jpg" class="d-block w-100" alt="Mendoza">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Mendoza</h5>
+        <p>Tierra de viñedos, montañas y experiencias inolvidables enológicas</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/cordoba2.jpeg" class="d-block w-100" alt="Córdoba">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Cordoba</h5>
+        <p>Historia, naturaleza, cultura, arte, paisajes, tradición, experiencias, encanto, diversidad, hospitalidad</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/buenos-aires.jpeg" class="d-block w-100" alt="Buenos Aires">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Buenos Aires</h5>
+        <p>Ciudad cosmopolita, cultura vibrante y pasión inigualable argentina</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/las-lenas.webp" class="d-block w-100" alt="Las Leñas">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Las Leñas</h5>
+        <p>Paraíso invernal con pistas desafiantes y paisajes espectaculares</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/salta.jpeg" class="d-block w-100" alt="...">
+      <img src="./img/salta.jpeg" class="d-block w-100" alt="Salta">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Salta</h5>
+        <p>La Linda. Cuna de cultura, historia, y paisajes inolvidables</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="./img/ushuaia.jpeg" class="d-block w-100" alt="Ushuaia">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <p>El fin del mundo, naturaleza salvaje y aventuras épicas</p>
       </div>
     </div>
   </div>
