--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
+<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
         <meta name="description" content="Explora la belleza de Argentina con nuestra guía de destinos nacionales. Descubre paisajes sorprendentes y vive la magia de nuestro país.">
@@ -39,6 +39,7 @@
     </nav>
    </header>
 
+<main>
    <div class="name-top">
    <h1>Destinos Nacionales</h1>
    </div>
@@ -64,7 +65,7 @@
             <img src="../img/mendoza4.jpg" class="card-img-top" alt="Mendoza">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Mendoza</p>
-                <p class="card-text">Viñedos interminables, majestuosa cordillera. Sabores de vino, aventuras sin fin. Embárcate en la experiencia única de Mendoza, Argentina. Turismo que mezcla la pasión vinícola, paisajes montañosos y actividades emocionantes.🍇🏔️.</p>
+                <p class="card-text">Viñedos interminables, majestuosa cordillera. Sabores de vino y aventuras. Embárcate en la experiencia única de Mendoza. Turismo que mezcla la pasión vinícola, paisajes montañosos y actividades emocionantes</p>
             </div>
         </div>
     </li>
@@ -82,7 +83,7 @@
             <img src="../img/cataratas33.jpg" class="card-img-top" alt="Cataratas">
             <div class="card-body">
                 <p class="titulo-carta-cruceros">Cataratas</p>
-                <p class="card-text">Explora las Cataratas del Iguazú: Donde las aguas danzan en un espectáculo majestuoso. Sumérgete en la maravilla natural y deja que la magia fluya en cada rincón. ¡Bienvenido a una de las 7 maravillas del mundo! <br>🌊🏞️"</p>
+                <p class="card-text">Explora las Cataratas del Iguazú: Donde las aguas danzan en un espectáculo majestuoso. Sumérgete en la maravilla natural y deja que la magia fluya en cada rincón. ¡Bienvenido a una de las 7 maravillas del mundo!</p>
             </div>
         </div>
     </li>
@@ -124,16 +125,14 @@
     </li>
 </ul>
 
-
+</main>
 
 
 <hr>
-<div>
-  <footer>
-    <hr>
-    <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
-  </footer>
-</div>
+<footer>
+  <hr>
+  <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
