--- a/pages/promociones-bancarias.html
+++ b/pages/promociones-bancarias.html
@@ -9,7 +9,7 @@
         <title>Mystery Travel - Cruceros</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="../img/favicon.png">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/main.css">
 
 </head>
 
@@ -39,7 +39,10 @@
     </nav>
    </header>
 
-   <h2 class="name-top">Conoce nuestras promociones</h2>
+   <main>
+    <div class="name-top">
+    <h1>Conoce nuestras promociones</h1>
+    </div>
     
 
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -68,8 +71,11 @@
     </button>
     </div>
 
-<div>
-        <p><h2>Descuentos y Promociones</h2></p>
+
+    <div class="comentario-cruises">
+        <h3>Descuentos y promociones</h3>
+    </div>
+    <div>
     <ul class="promociones-list">
         <li>
             <div class="card" style="width: 18rem;">
@@ -94,7 +100,7 @@
                 <img src="../img/visa.png" class="card-promociones" alt="Visa">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">Visa</p>
-                <p class="card-text">Explora un universo de ventajas con Visa. Compras con descuentos exclusivos, cuotas sin interés y promociones que hacen cada transacción única. Vive la experiencia Visa en cada compra. <br><br>🛍️💳 #VisaBeneficios</p>
+                <p class="card-text">Explora un universo de ventajas con Visa. Compras con descuentos exclusivos, cuotas sin interés y promociones que hacen cada transacción única. Vive la experiencia Visa en cada compra.<br>🛍️💳 #VisaBeneficios</p>
                 </div>
             </div>
         </li>
@@ -103,7 +109,7 @@
                 <img src="../img/naranjax.png" class="card-promociones" alt="NaranjaX">
                 <div class="card-body">
                 <p class="titulo-carta-promociones">Naranja X</p>
-                <p class="card-text">¡Disfruta de tus compras con Tarjeta Naranja X! Descuentos exclusivos, cuotas sin interés y promociones increíbles. Haz que cada compra sea una experiencia única con beneficios especiales. <br><br>🛍️💳 #TarjetaNaranjaX</p>
+                <p class="card-text">¡Disfruta de tus compras con Tarjeta Naranja X! Descuentos exclusivos, cuotas sin interés y promociones increíbles. Haz que cada compra sea una experiencia única con beneficios especiales.<br>🛍️💳 #TarjetaNaranjaX</p>
                 </div>
             </div>
         </li>
@@ -119,12 +125,13 @@
     </ul>
 </div>
 
-<div>
-  <footer>
-      <hr>
-      <p class="footer">Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
-    </footer>
-  </div>
+</main>
+
+<hr>
+<footer>
+  <hr>
+  <p>Derechos de autor © 2023. Mi sitio web. Contáctanos en mysterytravel@viajes.com</p>
+</footer>
   
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
